Adicionei pagina Sobre

--- a/Html/home.html
+++ b/Html/home.html
@@ -1,30 +1,55 @@
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/home.css">
     <title>Surf Shop</title>
 </head>
+
 <body>
-    <div class="Navbar">
-        <h1>Surf Shop</h1>
+    <header class="header">
 
-        <div class="sideButtons">
-            <h2>Home </h2>
-            <h2>Sobre </h2>
-            <h2>Produtos </h2>
-            <h2>Contato</h2>
+        <div class="Navbar">
+            <h1>Surf Shop</h1>
+
+            <div class="sideButtons">
+                <h2>Home </h2>
+                <h2>Sobre </h2>
+                <h2>Produtos </h2>
+                <h2>Contato</h2>
+            </div>
         </div>
-    </div>
 
-    <div class="Imagem-Back">
-        <img src="/css/Img/Surf-back3.jpg" alt="Imagem do mar" width="1300" height="700">
-    </div>
-    
-    <div class="Sobre">
-        <h1>SOBRE:</h1>
-        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio saepe eligendi perferendis, necessitatibus eius id? Tempora, repellendus distinctio iste quidem velit odit consequuntur beatae corporis voluptatem, eaque, voluptatum ipsa voluptatibus.</h2>
-    </div>
-    
+        <div class="info-titulo">
+            <div class="info-texto">
+
+                <h1>O onda que nòs leva </h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam minus voluptatum molestiae quae quo
+                    cupiditate porro soluta, et dolor obcaecatim.</p>
+            </div>
+            <div class="info-botao">
+                <a href="#" class="botao-SM">Saiba Mais</a>
+            </div>
+        </div>
+
+        <div class="Imagem-Back">
+            <img src="/css/Img/Surf-back4.jpg" alt="Imagem do mar">
+        </div>
+    </header>
+    <section class="Sobre">
+        <div class="Texto-Sobre">
+            <h1>SOBRE:</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat ullam debitis, hic minima dicta nihil et
+                voluptate, amet modi eligendi deleniti possimus reprehenderit saepe pariatur iure magnam accusantium?
+                Quia iusto illum quod temporibus aut laboriosam similique deserunt exercitationem dolorem doloribus?</p>
+        </div>
+        <div class="Imagem-Sobre">
+            <img src="/css/Img/OldSurfShop.jpg" alt="Imagem do antigo surf shop">
+        </div>
+
+    </section>
+
 </body>
+
 </html>
