--- a/Html/home.html
+++ b/Html/home.html
@@ -14,10 +14,10 @@
             <h1>Surf Shop</h1>
 
             <div class="sideButtons">
-                <h2>Home </h2>
-                <h2>Sobre </h2>
-                <h2>Produtos </h2>
-                <h2>Contato</h2>
+                <a href="/">Home</a>
+                <a href="#Sobre">Sobre</a>
+                <a href="#Produtos">Produtos</a>
+                <a href="#Contato">Contato</a>
             </div>
         </div>
 
@@ -29,7 +29,7 @@
                     cupiditate porro soluta, et dolor obcaecatim.</p>
             </div>
             <div class="info-botao">
-                <a href="#" class="botao-SM">Saiba Mais</a>
+                <a href="#Sobre" class="botao-SM">Saiba Mais</a>
             </div>
         </div>
 
@@ -37,7 +37,7 @@
             <img src="/css/Img/Surf-back4.jpg" alt="Imagem do mar">
         </div>
     </header>
-    <section class="Sobre">
+    <section class="Sobre" id="Sobre">
         <div class="Texto-Sobre">
             <h1>SOBRE:</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat ullam debitis, hic minima dicta nihil et
@@ -47,8 +47,40 @@
         <div class="Imagem-Sobre">
             <img src="/css/Img/OldSurfShop.jpg" alt="Imagem do antigo surf shop">
         </div>
-
     </section>
+    <div class="Titulo-Produtos">
+        <h1>Produtos :</h1>
+    </div>
+    <div class="Produtos" id="Produtos">
+        <div class="Produto-item">
+            <img src="/css/Img/Prancha5.jpg" alt="Prancha de surfe">
+            <div class="Texto-produto-item">
+                <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora dolorem minus est ipsam labore
+                    blanditiis?</h2>
+            </div>
+        </div>
+        <div class="Produto-item">
+            <img src="/css/Img/Prancha6.jpg" alt="Prancha de surfe">
+            <div class="Texto-produto-item">
+                <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error nihil et molestiae natus in
+                    excepturi?
+                </h2>
+            </div>
+        </div>
+        <div class="Produto-item">
+            <img src="/css/Img/Prancha7.jpg" alt="Prancha de surfe">
+            <div class="Texto-produto-item">
+                <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, soluta totam! Labore voluptatibus
+                    delectus reprehenderit?</h2>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="Assinatura" id="Contato">
+            <h1>Design by Thiago Miotti</h1>
+        </div>
+    </footer>
 
 </body>
 
